[package]
name = "hydrolix_helpers"   # Your crate name
version = "0.1.0"           # Initial version
authors = ["James Aviani <james.aviani@gmail.com>"] 
description = "Helper libraries for interacting with Hydrolix." # A concise description
license = "MIT" 
repository = "https://github.com/aviani-sb/hydrolix_helpers" 
homepage = "https://github.com/aviani-sb/hydrolix_helpers"  
readme = "README.md"    
keywords = ["hydrolix", "data", "rust"] # Relevant keywords for search
categories = ["data-processing", "utilities"] 
edition = "2021"            # Specify the Rust edition

[lib]
name = "hydrolix_helpers"
path = "src/lib.rs" 


[dependencies]
