[package]
name = "hydrolix_helpers"   # Your crate name
version = "0.1.4"           # Initial version
authors = ["James Aviani <james.aviani@gmail.com>"] 
description = "Helper libraries for interacting with Hydrolix." # A concise description
license = "MIT" 
repository = "https://github.com/aviani-sb/hydrolix_helpers" 
homepage = "https://github.com/aviani-sb/hydrolix_helpers"  
readme = "README.md"    
keywords = ["hydrolix", "data", "rust"] # Relevant keywords for search
categories = ["database", "api-bindings"] 
edition = "2021"            # Specify the Rust edition

[lib]
name = "hydrolix_helpers"
path = "src/lib.rs" 


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
chrono = "0.4.38"
lazy_static = "1.5.0"
once_cell = "1.20.2"
